--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Grandstander:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap');
 
 * {
   margin: 0;
@@ -48,4 +49,8 @@
 
 .ff_grandlander {
   font-family: 'Grandstander';
+}
+
+.ff_inter {
+  font-family: 'Inter', sans-serif;
 }
