--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,22 @@
   font-family: 'Grandstander';
 }
 
+.nav_links::before {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  width: 0;
+  height: 2px;
+  background-color: white;
+  left: 50%;
+  transition: 0.6s linear;
+}
+
+.nav_links:hover::before {
+  transform: translate(-50%);
+  width: 100%;
+}
+
 .bg-image-header {
   background-image: url("/src/assets/image/webp/bg-img-header.webp");
   background-repeat: no-repeat;
@@ -80,7 +96,7 @@
   z-index: 1;
 }
 
-.lnear_bg {
+.linear_bg {
   background: radial-gradient(0%, 0% at 50.44% 49.6%, #003869a1 0%, #0707157b 100%);
   position: absolute;
   width: 100%;
@@ -114,6 +130,11 @@
   border: 1px solid #FFFFFF;
   box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
+  transition: 0.6s ease-in-out;
+}
+
+.play_now_btn:hover {
+  background: transparent;
 }
 
 .bg_lightblue {
@@ -146,7 +167,7 @@
 .man-diamond-img {
   position: absolute;
   bottom: 80px;
-  left: 140px;
+  left: -50px;
   animation: mymove 3s linear infinite;
 }
 
@@ -194,7 +215,7 @@
 .ufo-2-img {
   position: absolute;
   right: 20px;
-  bottom: 0;
+  bottom: -10px;
   animation: ufo-1 9s linear infinite;
 }
 
@@ -245,9 +266,22 @@
   transform: rotate(5deg);
 }
 
+.play-pause-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 10%;
+  transform: translate(-50%, -50%);
+  transition: 0.6s linear;
+}
 
+.play-pause-btn:hover {
+  width: 40px;
+}
 
-
+.crusor-pointer {
+  cursor: pointer;
+}
 
 
 @media (min-width:576px) {
@@ -259,6 +293,17 @@
     --fs-24: 24px;
     --fs-32: 32px;
     --fs-70: 70px;
+  }
+
+  .play-pause-btn:hover {
+    width: 80px;
+  }
+
+  .play-pause-btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   .play_now_btn {
