--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,7 @@
   height: 100%;
   background-color: #ffffff;
   position: absolute;
-  top: 0;
+  top: 3px;
   left: 50%;
   margin-left: -3px;
 }
